--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-<<<<<<< HEAD
-# Compiled modules
-node_modules/
-
-# Package Lock
-package-lock.json
-=======
 # Logs
 logs
 *.log
@@ -144,4 +137,6 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
->>>>>>> e2f5c03727e381c1ea9310422caa9f01213e2242
+
+# package-lock
+package-lock.json
